# butane

./: .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .grcov.yaml  .mise.toml  .taplo.toml  CONTRIBUTING.md  Cargo.toml  HELP.md  Makefile  README.md  _typos.toml  async_checklist.md  branch.txt  deny.toml  notes.org
butane/: .gitignore  Cargo.toml  build.rs
butane/src/: lib.rs  r2.rs
butane/src/db/: deadpool.rs  mod.rs  r2.rs
butane/tests/: Cargo.toml  array_string.rs  basic.rs  build.rs  custom_enum_derived.rs  custom_pg.rs  custom_type.rs  derive_model.rs  fake.rs  json.rs  many.rs  migration-tests.rs  nullable.rs  pool.rs  query.rs  r2d2.rs  unmigrate.rs  uuid.rs
butane/tests/common/: blog.rs  mod.rs  pg.rs
butane_cli/: Cargo.toml
butane_cli/src/: lib.rs  main.rs
butane_cli/tests/: cargo_metadata.rs  embed.rs
butane_codegen/: Cargo.toml
butane_codegen/src/: filter.rs  lib.rs  test_field_type.rs
butane_core/: Cargo.toml
butane_core/src/: autopk.rs  custom.rs  fkey.rs  implementation.rs  lib.rs  many.rs  pkey.rs  sqlval.rs  sync.rs  util.rs  uuid.rs
butane_core/src/codegen/: dbobj.rs  migration.rs  mod.rs
butane_core/src/codegen/dbobj/: fields.rs
butane_core/src/db/: adapter.rs  connmethods.rs  dummy.rs  helper.rs  libsql.rs  macros.rs  mod.rs  mysql.rs  pg.rs  r2.rs  sqlite.rs  sync_adapter.rs  turso.rs
butane_core/src/migrations/: adb.rs  fs.rs  fsmigrations.rs  memmigrations.rs  migration.rs  mod.rs
butane_core/src/query/: fieldexpr.rs  mod.rs
butane_core/tests/: adb.rs  array_string.rs  autopk.rs  codegen.rs  connection.rs  migration-tests.rs  migration.rs  transactions.rs  uuid.rs
butane_core/tests/expectations/: adb_add_renamed_table_fkey_ddl_turso.sql  adb_add_table_fkey_back_reference_turso.sql  adb_add_table_many_ddl_turso.sql  migration_add_field_sqlite_down.sql  migration_add_field_with_default_pg_up.sql  migration_delete_table_sqlite_down.sql  migration_delete_table_turso_down.sql  migration_modify_field_different_default_sqlite_down.sql  migration_modify_field_nullability_change_pg_down.sql  migration_modify_field_nullability_change_sqlite_up.sql  migration_modify_field_pkey_change_pg_up.sql  migration_modify_field_pkey_change_turso_up.sql  migration_modify_field_uniqueness_change_pg_up.sql
butane_test_helper/: Cargo.toml
butane_test_helper/src/: lib.rs  libsql.rs  mysql.rs  pg.rs  turso.rs
butane_test_helper/tests/: ephemeralpg.rs  initdb.rs  libsql.rs  macos_shared_memory.rs  mysql.rs  sqlite.rs  turso.rs
butane_test_macros/: Cargo.toml
butane_test_macros/src/: lib.rs
example/: .gitignore  Cargo.toml  README.md  build.rs
example/src/: main.rs
example/tests/: test_cli.rs
examples/custom_pg/: Cargo.toml  README.md
examples/custom_pg/src/: butane_migrations.rs  lib.rs  models.rs
examples/getting_started/: .gitignore  Cargo.toml  README.md  gettingstarted.db
examples/getting_started/.butane/: clistate.json
examples/getting_started/.butane/migrations/: state.json
examples/getting_started/propane/: connection.json
examples/getting_started/propane/migrations/: state.json
examples/getting_started/src/: butane_migrations.rs  lib.rs  models.rs
examples/getting_started/tests/: rollback.rs  unmigrate.rs
examples/getting_started_async/: .gitignore  Cargo.toml  README.md
examples/getting_started_async/src/: butane_migrations.rs  lib.rs  models.rs
examples/getting_started_async/tests/: rollback.rs  unmigrate.rs
examples/newtype/: Cargo.toml  README.md
examples/newtype/.butane/: connection.json
examples/newtype/.butane/migrations/: state.json
examples/newtype/src/: butane_migrations.rs  lib.rs  main.rs  models.rs
examples/newtype/tests/: rollback.rs  unmigrate.rs  validation.rs
examples/reserved-words/: Cargo.toml  README.md
examples/reserved-words/.butane/migrations/: state.json
examples/reserved-words/src/: butane_migrations.rs  lib.rs  models.rs
examples/reserved-words/tests/: unmigrate.rs
propane/: .gitignore  Cargo.toml
propane/src/: lib.rs
propane/tests/: basic.rs  custom_type.rs  migration-tests.rs  nullable.rs  query.rs  uuid.rs
propane/tests/common/: blog.rs  mod.rs
propane_codegen/: Cargo.toml
propane_codegen/src/: dbobj.rs  filter.rs  lib.rs  migration.rs
propane_core/: Cargo.toml
propane_core/src/: adb.rs  chrono.rs  datetime.rs  field.rs  fkey.rs  lib.rs  many.rs  migrations.rs  query.rs  sqlval.rs  uuid.rs
propane_core/src/codegen/: dbobj.rs  migration.rs  mod.rs
propane_core/src/db/: connmethods.rs  helper.rs  internal.rs  macros.rs  mod.rs  pg.rs  sqlite.rs
propane_core/src/migrations/: adb.rs  fs.rs  fsmigrations.rs  memfs.rs  memmigrations.rs  migration.rs  mod.rs
propane_core/src/query/: field.rs  fieldexpr.rs  mod.rs
trybuild_tests/: Cargo.toml  README.md
trybuild_tests/src/: lib.rs
trybuild_tests/tests/: Cargo.toml  trybuild.rs
trybuild_tests/tests/trybuild/: Cargo.toml
trybuild_tests/tests/trybuild/fail/: butane_type_custom_no_name.rs  butane_type_custom_no_name.stderr  butane_type_extra_args.rs  butane_type_extra_args.stderr  butane_type_no_args.rs  butane_type_no_args.stderr  butane_type_on_function.rs  butane_type_on_function.stderr  butane_type_on_impl.rs  butane_type_on_impl.stderr  dataresult_no_model.rs  dataresult_no_model.stderr  dataresult_tuple_struct.rs  dataresult_tuple_struct.stderr  fieldtype_empty_enum.rs  fieldtype_empty_enum.stderr  fieldtype_hybrid_tuple.rs  fieldtype_hybrid_tuple.stderr  fieldtype_union.rs  fieldtype_union.stderr  filter_call_invalid_param.rs  filter_call_invalid_param.stderr  filter_contains_wrong_args.rs  filter_contains_wrong_args.stderr  filter_like_invalid_param.rs  filter_like_invalid_param.stderr  filter_missing_expression.rs  filter_missing_expression.stderr  filter_unknown_method.rs  filter_unknown_method.stderr  filter_unsupported_expression.rs  filter_unsupported_expression.stderr  filter_unsupported_operator.rs  filter_unsupported_operator.stderr  model_auto_non_integer.rs  model_auto_non_integer.stderr  model_auto_non_pk.rs  model_auto_non_pk.stderr  model_autopk_float.rs  (+31 more)
(+217 files in other folders)
