[workspace]
resolver = "2"
members = [
  "butane",
  "butane_cli",
  "butane_codegen",
  "butane_core",
  "butane_test_helper",
  "butane_test_macros",
  "example",
  "examples/newtype",
  "examples/getting_started",
  "examples/getting_started_async",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Electron100/butane"
version = "0.7.0"

[workspace.dependencies]
async-trait = "0.1"
butane = { version = "0.7", path = "butane" }
butane_cli = { path = "butane_cli" }
butane_core = { version = "0.7", path = "butane_core" }
butane_codegen = { version = "0.7", path = "butane_codegen" }
butane_test_helper = { path = "butane_test_helper" }
butane_test_macros = { path = "butane_test_macros" }
cfg-if = "^1.0"
chrono = { version = "0.4.25", default-features = false, features = [
  "serde",
  "std",
] }
crossbeam-channel = "0.5"
deadpool = "0.12"
env_logger = "0.11"
fake = "2.6"
log = "0.4"
maybe-async-cfg = { version = "0.2.5", default-features = false }
nonempty = "0.11"
once_cell = "1.5.2"
paste = "1.0.11"
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
r2d2 = "0.8"
rand = "0.8"
rusqlite = { version = "0.34", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
sqlparser = "0.55"
syn = { version = "2", features = ["extra-traits", "full"] }
tempfile = "3.10"
tokio = { version = "1"}
tokio-postgres = "0.7"
tokio-test = { version = "0.4"}
uuid = "1.2"

[workspace.metadata.release]
allow-branch = ["master"]
push = false
