[package]
name = "butane"
version.workspace = true
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
description = "An ORM with a focus on simplicity and on writing Rust, not SQL."
readme = "../README.md"
keywords = ["database", "orm", "sql"]
categories = ["database"]
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/butane/"
build = "build.rs"

[features]
async = ["butane_core/async"]
async-adapter = ["butane_core/async-adapter"]
default = ["datetime", "json", "uuid"]
fake = ["butane_core/fake"]
json = ["butane_codegen/json", "butane_core/json"]
sqlite = ["butane_core/sqlite"]
sqlite-bundled = ["butane_core/sqlite-bundled"]
pg = ["butane_core/pg"]
datetime = ["butane_codegen/datetime", "butane_core/datetime"]
debug = ["butane_core/debug"]
log = ["butane_core/log"]
r2d2 = ["butane_core/r2d2"]
tls = ["butane_core/tls"]
uuid = ["butane_codegen/uuid", "butane_core/uuid"]

[dependencies]
butane_codegen = { workspace = true }
butane_core = { workspace = true }

[dev-dependencies]
butane_test_helper = { workspace = true }
butane_test_macros = { workspace = true }
cfg-if = { workspace = true }
paste = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
fake = { workspace = true, features = ["chrono", "derive", "uuid"] }
geo-types = "0.7"
log.workspace = true
nonempty.workspace = true
quote = { workspace = true }
maybe-async-cfg.workspace = true
proc-macro2 = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-postgres = { features = ["with-geo-types-0_7"], workspace = true }
tokio-test = { workspace = true }
rand = { workspace = true }
r2d2_for_test = { package = "r2d2", version = "0.8" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
uuid_for_test = { package = "uuid", version = "1.2", features = ["v4"] }

[package.metadata.docs.rs]
all-features = true

[[test]]
name = "custom_pg"
required-features = ["pg"]

[[test]]
name = "fake"
required-features = ["fake"]

[[test]]
name = "json"
required-features = ["json"]

[[test]]
name = "r2d2"
required-features = ["r2d2"]

[[test]]
name = "uuid"
required-features = ["uuid"]
