[package]
name = "butane"
version.workspace = true
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
description = "An ORM with a focus on simplicity and on writing Rust, not SQL."
readme = "../README.md"
keywords = ["database", "orm", "sql"]
categories = ["database"]
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/butane/"
rust-version.workspace = true
exclude = ["tests"]
autobenches = false
autotests = false

[features]
async = ["butane_core/async", "butane_codegen/async"]
async-adapter = ["butane_core/async-adapter"]
deadpool = ["dep:deadpool", "async"]
default = ["datetime", "json", "uuid"]
fake = ["butane_core/fake"]
json = ["butane_codegen/json", "butane_core/json"]
sqlite = ["butane_core/sqlite"]
sqlite-bundled = ["butane_core/sqlite-bundled"]
pg = ["async", "butane_core/pg"]
datetime = ["butane_codegen/datetime", "butane_core/datetime"]
debug = ["butane_core/debug"]
log = ["butane_core/log"]
r2d2 = ["dep:r2d2"]
turso = ["butane_core/turso"]
turso-async = ["async", "async-adapter", "butane_core/turso-async"]
tls = ["butane_core/tls"]
uuid = ["butane_codegen/uuid", "butane_core/uuid"]

[dependencies]
butane_codegen = { workspace = true }
butane_core = { workspace = true }
r2d2 = { optional = true, workspace = true }
deadpool = { optional = true, workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
