[package]
name = "butane_cli"
version.workspace = true
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
description = "The CLI for the Butane ORM"
readme = "../README.md"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/butane/"

[lib]
doc = false

[[bin]]
name = "butane"
path = "src/main.rs"
doc = false

[features]
default = ["pg", "sqlite"]
pg = ["butane/pg"]
sqlite = ["butane/sqlite"]
sqlite-bundled = ["butane/sqlite-bundled"]

[dependencies]
anyhow = "1.0"
butane.workspace = true
cargo_metadata = "0.18"
chrono = { workspace = true }
clap = { version = "4.1", features = ["derive", "string", "wrap_help"] }
clap-verbosity-flag = "2.2"
env_logger.workspace = true
log.workspace = true
nonempty.workspace = true
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
