[package]
name = "butane_codegen"
version.workspace = true
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
description = "Macros for Butane. Do not use this crate directly -- use the butane crate."
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Electron100/butane"

[features]
auto-save-related = ["butane_core/auto-save-related"]
datetime = ["butane_core/datetime"]
json = ["butane_core/json"]
uuid = ["butane_core/uuid"]

[dependencies]
butane_core = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lib]
proc-macro = true
