[package]
name = "butane_codegen"
version.workspace = true
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
description = "Macros for Butane. Do not use this crate directly -- use the butane crate."
readme = "../README.md"
license.workspace = true
repository.workspace = true

[features]
datetime = ["butane_core/datetime"]
json = ["butane_core/json"]
uuid = ["butane_core/uuid"]

[dependencies]
butane_core = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde_variant = "0.1.3"
syn = { workspace = true }

[lib]
proc-macro = true
