[package]
name = "butane_core"
version.workspace = true
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
description = "Internals for Butane. Do not use this crate directly -- use the butane crate."
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Electron100/butane"


[features]
async-adapter = []
datetime = ["chrono", "tokio-postgres?/with-chrono-0_4"]
debug = ["log"]
fake = ["dep:fake", "rand"]
json = ["tokio-postgres?/with-serde_json-1", "rusqlite?/serde_json"]
log = ["dep:log", "rusqlite?/trace"]
pg = ["bytes", "tokio-postgres"]
sqlite = ["rusqlite", "async-adapter"]
sqlite-bundled = ["rusqlite/bundled"]
tls = ["native-tls", "postgres-native-tls"]


[dependencies]
async-trait = { workspace = true}
bytes = { version = "1.0", optional = true }
cfg-if = { workspace = true }
chrono = { optional = true, workspace = true }
# todo make adapter optional
crossbeam-channel = { workspace = true }
dyn-clone = { version = "1.0" }
fake = { workspace = true, optional = true }
fallible-iterator = "0.3"
fallible-streaming-iterator = "0.1"
fs2 = "0.4" # for file locks
futures-util = "0.3"
hex = "0.4"
log = { optional = true, workspace = true }
maybe-async-cfg = { workspace = true }
native-tls = { version = "0.2", optional = true }
once_cell = { workspace = true }
pin-project = "1"
tokio = {workspace = true, features = ["rt", "sync", "rt-multi-thread"]}
tokio-postgres = { optional = true, workspace = true }
postgres-native-tls = { version = "0.5", optional = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
# todo re-enable r2d2
#r2d2 = { optional = true, workspace = true }
rand = { optional = true, workspace = true }
regex = { version = "1.5", features = ["std"] }
rusqlite = { workspace = true, optional = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
syn = { workspace = true }
thiserror = "1.0"
uuid = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = "1.5"
butane_test_helper = { workspace = true }
env_logger = { workspace = true }
paste = { workspace = true }
tempfile = "3.7"

[[test]]
name = "uuid"
required-features = ["uuid"]
