[package]
name = "butane_core"
version.workspace = true
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
description = "Internals for Butane. Do not use this crate directly -- use the butane crate."
readme = "../README.md"
license.workspace = true
repository.workspace = true


[features]
datetime = ["chrono", "postgres?/with-chrono-0_4"]
debug = ["log"]
fake = ["dep:fake", "rand"]
json = ["postgres?/with-serde_json-1", "rusqlite?/serde_json"]
log = ["dep:log", "rusqlite?/trace"]
pg = ["bytes", "postgres"]
sqlite = ["rusqlite"]
sqlite-bundled = ["rusqlite/bundled"]
tls = ["native-tls", "postgres-native-tls"]


[dependencies]
bytes = { version = "1.0", optional = true }
cfg-if = { workspace = true }
chrono = { optional = true, workspace = true }
fake = { workspace = true, optional = true }
fallible-iterator = "0.3"
fallible-streaming-iterator = "0.1"
fs2 = "0.4" # for file locks
hex = "0.4"
log = { optional = true, workspace = true }
native-tls = { version = "0.2", optional = true }
nonempty.workspace = true
once_cell = { workspace = true }
pin-project = "1"
postgres = { optional = true, workspace = true }
postgres-native-tls = { version = "0.5", optional = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
r2d2 = { optional = true, workspace = true }
rand = { optional = true, workspace = true }
regex = { version = "1.5", features = ["std"] }
rusqlite = { workspace = true, optional = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
sqlparser = { workspace = true }
syn = { workspace = true }
thiserror = "1.0"
uuid = { workspace = true, optional = true }

[dev-dependencies]
butane_core = { workspace = true, features = ["log"] }
assert_matches = "1.5"
butane_test_helper = { workspace = true }
env_logger = { workspace = true }
paste = { workspace = true }
tempfile.workspace = true

[[test]]
name = "uuid"
required-features = ["uuid"]
