[package]
name = "butane_core"
version.workspace = true
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
description = "Internals for Butane. Do not use this crate directly -- use the butane crate."
readme = "../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
async-adapter = ["async", "crossbeam-channel"]
async = ["tokio"]
datetime = ["chrono", "tokio-postgres?/with-chrono-0_4"]
debug = ["log"]
fake = ["dep:fake", "rand"]
json = ["tokio-postgres?/with-serde_json-1", "rusqlite?/serde_json"]
log = ["dep:log", "rusqlite?/trace"]
pg = ["async", "bytes", "tokio-postgres"]
sqlite = ["rusqlite"]
sqlite-bundled = ["rusqlite/bundled"]
tls = ["native-tls", "postgres-native-tls"]
turso = ["async", "dep:turso"]

[dependencies]
arrayvec = "0.7"
async-trait = { workspace = true}
bytes = { version = "1.0", optional = true }
cfg-if = { workspace = true }
chrono = { optional = true, workspace = true }
crossbeam-channel = { workspace = true, optional = true }
desynt.workspace = true
dyn-clone = { version = "1.0" }
fake = { workspace = true, optional = true }
fallible-iterator = "0.3"
fallible-streaming-iterator = "0.1"
fs2 = "0.4" # for file locks
futures-util = "0.3"
hex = "0.4"
log = { optional = true, workspace = true }
maybe-async-cfg = { workspace = true }
native-tls = { version = "0.2", optional = true }
nonempty.workspace = true
pin-project = "1"
tokio = {workspace = true, optional = true, features = ["rt", "sync", "rt-multi-thread"]}
tokio-postgres = { optional = true, workspace = true }
phf.workspace = true
postgres-native-tls = { optional = true, workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rand = { optional = true, workspace = true }
regex = { version = "1.5", features = ["std"] }
rusqlite = { workspace = true, optional = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
turso = { workspace = true, optional = true }
url.workspace = true
uuid = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = "1.5"
butane_test_helper = { workspace = true, default-features = false, features = ["pg", "sqlite", "turso"] }
butane_test_macros.workspace = true
env_logger = { workspace = true }
paste = { workspace = true }
pretty_assertions.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }
uuid.workspace = true
whoami = "1.6"

[[test]]
name = "uuid"
required-features = ["uuid"]
