[package]
name = "butane_test_helper"
version.workspace = true
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
description = "A test helper for butane"
publish = false
keywords = ["database", "pg", "test"]
categories = ["database"]
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/butane/"
rust-version.workspace = true

[features]
bin = ["ctrlc"]
default = ["pg", "sqlite"]
libsql = ["butane_core/libsql", "reqwest", "tokio"]
pg = ["butane_core/pg", "tokio-postgres"]
sqlite = ["butane_core/async-adapter", "butane_core/sqlite"]
sqlite-bundled = ["butane_core/sqlite-bundled"]
turso = ["butane_core/turso"]

[dependencies]
block-id = "0.2"
butane_core = { workspace = true }
ctrlc = { version = "3.4", optional = true }
env_logger.workspace = true
libc = "0.2"
log.workspace = true
maybe-async-cfg.workspace = true
reqwest = { version = "0.12", optional = true }
tokio = { workspace = true, optional = true, features = [
  "io-std",
  "io-util",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "time",
] }
nonempty.workspace = true
thiserror.workspace = true
tokio-postgres = { features = [
  "with-geo-types-0_7",
], optional = true, workspace = true }
rand.workspace = true
tempfile.workspace = true
uuid = { features = ["v4"], workspace = true }
which.workspace = true

[dev-dependencies]
pollster = "0.4"
temp-env = "0.3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
libsql.workspace = true

[package.metadata.release]
release = false

[[test]]
name = "ephemeralpg"
path = "tests/ephemeralpg.rs"
required-features = ["pg"]

[[test]]
name = "initdb"
path = "tests/initdb.rs"
required-features = ["pg"]


[[test]]
name = "macos_shared_memory"
path = "tests/macos_shared_memory.rs"
required-features = ["pg"]

[[test]]
name = "sqlite"
path = "tests/sqlite.rs"
required-features = ["sqlite"]

[[test]]
name = "libsql"
path = "tests/libsql.rs"
required-features = ["libsql"]

[[bin]]
bench = false
name = "pg_tmp_server"
path = "src/bin/pg_tmp_server.rs"
required-features = ["bin", "pg"]
test = false
