[package]
name = "example"
version = "0.1.0"
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
butane = { features = ["pg", "sqlite"], workspace = true }
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
assert_cmd = "2.0"

[package.metadata.release]
release = false
