[package]
name = "example"
version = "0.1.0"
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
publish = false
build = "build.rs"

[features]
sqlite-bundled = ["butane/sqlite-bundled"]

[dependencies]
butane = { features = ["sqlite"], workspace = true }

[dev-dependencies]
assert_cmd = "2.0"

[package.metadata.release]
release = false
