[package]
name = "example"
version = "0.1.0"
authors = ["James Oakley <james@electronstudio.org>"]
license.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[features]
sqlite-bundled = ["butane/sqlite-bundled"]

[dependencies]
butane = { features = ["pg", "sqlite"], workspace = true }
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
assert_cmd = "2.0"

[package.metadata.release]
release = false
