[package]
name = "propane_core"
version = "0.1.0"
authors = ["James Oakley <james@electronstudio.org>"]
edition = "2018"

[features]
datetime = ["chrono"]
debug = ["exec_time"]

[dependencies]
bytes = "0.5" #todo should be part of postgres feature
fs2 = "0.4"
hex = "0.4"
lazycell = "1.2"
log = "0.4"
# todo figure out how to enable postgres with-chrono only if both postgres and chrono features are selected
postgres={ version = "0.18", features = ["with-chrono-0_4"] }
proc-macro2 = "1.0"
quote = "1.0"
rusqlite = "0.22.0"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
thiserror = "1.0"
chrono = { version = "0.4", features=["serde"], optional = true }
exec_time = { version="0.1.4", optional=true }
uuid = {version = "0.8", optional=true}
