[package]
name = "propane_core"
version = "0.1.0"
authors = ["James Oakley <james@electronstudio.org>"]
edition = "2018"

[features]
datetime = ["chrono", "postgres/with-chrono-0_4"]
debug = ["exec_time"]
sqlite = ["rusqlite"]
tls = ["postgres-native-tls", "native-tls"]
pg = ["postgres", "bytes"]


[dependencies]
bytes = { version="0.5", optional=true}
cfg-if = "1.0"
fs2 = "0.4"
hex = "0.4"
lazycell = "1.3"
log = "0.4"
# todo figure out how to enable postgres with-chrono only if both postgres and chrono features are selected
postgres={ version = "0.18", optional = true}
postgres-native-tls={ version = "0.4", optional = true }
proc-macro2 = "1.0"
native-tls={ version = "0.2", optional = true }
quote = "1.0"
rusqlite = {version = "0.24", optional = true}
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
thiserror = "1.0"
chrono = { version = "0.4", features=["serde"], optional = true }
exec_time = { version="0.1.4", optional=true }
uuid = {version = "0.8", optional=true}
