[package]
name = "trybuild_tests"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true
autobenches = false
autobins = false
autoexamples = false

[lib]
doctest = false
test = false

[dependencies]

[dev-dependencies]
butane.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
trybuild = "1.0"
