[package]
name = "butane_tests"
version.workspace = true
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
description = "Integration tests for butane ORM"
license.workspace = true
repository.workspace = true
publish = false
rust-version.workspace = true
build = "build.rs"

[features]
async = ["butane/async"]
datetime = ["butane/datetime"]
json = ["butane/json"]
sqlite = ["butane/sqlite"]
sqlite-bundled = ["butane/sqlite-bundled"]
pg = ["butane/pg"]
fake = ["butane/fake"]
uuid = ["butane/uuid"]
r2d2 = ["butane/r2d2"]
deadpool = ["butane/deadpool"]
turso = ["butane/turso"]

[lib]
path = "common/mod.rs"

[dependencies]
butane = { workspace = true }
butane_core = { workspace = true }
butane_test_helper = { workspace = true, default-features = false, features = ["pg", "sqlite", "turso"] }
butane_test_macros = { workspace = true }
cfg-if = { workspace = true }
paste = { workspace = true }
chrono = { workspace = true, features = ["now"] }
deadpool = { workspace = true }
env_logger = { workspace = true }
fake = { workspace = true, features = ["chrono", "derive", "uuid"] }
geo-types = "0.7"
log.workspace = true
nonempty.workspace = true
quote = { workspace = true }
maybe-async-cfg.workspace = true
proc-macro2 = { workspace = true }
r2d2 = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-postgres = { features = ["with-geo-types-0_7"], workspace = true }
tokio-test = { workspace = true }
uuid_for_test = { package = "uuid", version = "1.2", features = ["v4"] }

[[test]]
name = "basic"
path = "basic.rs"
required-features = ["async"]

[[test]]
name = "custom_enum_derived"
path = "custom_enum_derived.rs"
required-features = ["async"]

[[test]]
name = "custom_type"
path = "custom_type.rs"
required-features = ["async"]

[[test]]
name = "fake"
path = "fake.rs"
required-features = ["fake"]

[[test]]
name = "json"
path = "json.rs"
required-features = ["async", "json"]

[[test]]
name = "many"
path = "many.rs"
required-features = ["async"]

[[test]]
name = "nullable"
path = "nullable.rs"
required-features = ["async"]

[[test]]
name = "pool"
path = "pool.rs"
required-features = ["r2d2", "deadpool"]

[[test]]
name = "query"
path = "query.rs"
required-features = ["async"]

[[test]]
name = "unmigrate"
path = "unmigrate.rs"
required-features = ["async"]

[[test]]
name = "uuid"
path = "uuid.rs"
required-features = ["async", "uuid"]
