[package]
name = "getting_started"
version = "0.1.0"
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
publish = false

[[bin]]
name = "show_posts"
doc = false

[[bin]]
name = "write_post"
doc = false

[[bin]]
name = "delete_post"
doc = false

[lib]
doc = false

[dependencies]
butane = { features = ["default", "pg", "sqlite"], workspace = true }
tokio = { workspace = true, features = ["macros"] }


[package.metadata.release]
release = false
